--- a/engine/orchestration/pom.xml
+++ b/engine/orchestration/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>cloud-plugin-shutdown</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cloudstack</groupId>
+            <artifactId>cloud-framework-db</artifactId>
+            <version>4.19.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
