--- a/usage/conf/log4j-cloud_usage.xml.in
+++ b/usage/conf/log4j-cloud_usage.xml.in
@@ -38,7 +38,13 @@ under the License.
          <ThresholdFilter level="DEBUG" onMatch="ACCEPT" onMismatch="DENY"/>
          <Policies>
             <TimeBasedTriggeringPolicy/>
+            <SizeBasedTriggeringPolicy size="100MB" />
          </Policies>
+         <DefaultRolloverStrategy max="31">
+            <Delete basePath="./" maxDepth="1">
+                <IfAccumulatedFileCount exceeds="45"/>
+            </Delete>
+         </DefaultRolloverStrategy>
          <PatternLayout pattern="%d{ISO8601} %-5p [%c{3}] (%t:%x) (logid:%X{logcontextid}) %m%ex%n"/>
       </RollingFile>
    </Appenders>
